[tool.poetry]
name = "mjolnir"
version = "0.1.0"
description = ""
authors = ["Owais Jamil <desertthunder.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
